--- a/public/index2.html
+++ b/public/index2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.css" />
     <link type="text/css" rel="stylesheet" href="bower_components/firebaseui/dist/firebaseui.css" />
-    <link type="text/css" href="./css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
     <script src="bower_components/firebaseui/dist/firebaseui.js"></script>
     <title>Biblioteca Dev</title>
