--- a/public/sair.html
+++ b/public/sair.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.css" />
     <link type="text/css" rel="stylesheet" href="bower_components/firebaseui/dist/firebaseui.css" />
-    <link href="style.css" rel="stylesheet">
-    <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
-    <script src="bower_components/firebaseui/dist/firebaseui.js"></script>
+    <link type="text/css" href="./css/style.css" rel="stylesheet">
     <title>Biblioteca Dev</title>
   </head>
 <body class="body">
     <div class="title">        
-        <h1>Bem-vindo à<br> BibliotecaDev!</h1>
+        <h1>Você saiu de<br> BibliotecaDev!</h1>
         <div type="content" class="content">
-            <p><b>Descubra um novo mundo...</b></p><br>
+            <p><b>Para entrar novamente é só fazer o login...</b></p><br>
             <input type="text" class="element" name="user" id="user" placeholder="e-mail"><br><br>
             <input type="password" class="element" name="senha" id="senha" placeholder="senha"><br><br>
             <input type="checkbox" name="verify" id="verify" style="text-align: left;">
