--- a/public/menu.html
+++ b/public/menu.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Biblioteca Dev</title>
     <link href="./css/header.css" rel="stylesheet">
-    <script>
-        function dark() {
-            var e1 = document.body;
-            e1.classList.toggle("dark-mode");
-        }
-    </script>
   </head>
 <body>
     <header class="header">
@@ -22,8 +16,7 @@
                 <li><a href="/tela_renovacao.html" target="bottom">RENOVAÇÃO</a></li>
                 <li><a href="/tela_relatorios.html" target="bottom">RELATÓRIOS</a></li>
                 <li><a href="">AJUDA</a></li>
-                <li><a href="">SAIR</a></li>
-                <li><button id="btn" onclick="dark()">Modo<br>escuro</button></li>
+                <li><a href="/sair.html" target="bottom">SAIR</a></li>
             </ul>
         </nav>
     </header>
