--- a/public/menu.html
+++ b/public/menu.html
@@ -15,7 +15,7 @@
                 <li><a href="/tela_emprestimos.html" target="bottom">EMPRÉSTIMO</a></li>
                 <li><a href="/tela_renovacao.html" target="bottom">RENOVAÇÃO</a></li>
                 <li><a href="/tela_relatorios.html" target="bottom">RELATÓRIOS</a></li>
-                <li><a href="">AJUDA</a></li>
+                <li><a href="/tela_catalogo.html" target="bottom">CATÁLOGO</a></li>
                 <li><a href="" target="bottom">SAIR</a></li>
             </ul>
         </nav>
