--- a/public/tela_cadastro.html
+++ b/public/tela_cadastro.html
@@ -7,7 +7,7 @@
     <link href="/css/default.css" rel="stylesheet">
     
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <title>Biblioteca Dev - Cadastro</title>
+    <title>Cadastro</title>
   </head>
 <body>
     <div>
